# cargo-features = ["edition2021"]

[package]
name = "mutex-extra"
version = "0.9.3"
description = "`RefMutex<T>` that is similar to `Mutex<T>` but is `Sync` and `Send` even if `T` isn't `Send`."
homepage = "https://github.com/vporton/ref_mutex"
repository = "https://github.com/vporton/ref_mutex"
readme = "https://github.com/vporton/ref_mutex/blob/master/README.md"
keywords = ["mutex", "sync", "synchronization"]
categories = ["asynchronous"]

# edition = "2021"
license = "Apache-2.0"

[lib]
name = "ref_mutex"

[dev-dependencies]
owning_ref = "^0.4.1"
